#poetry init

[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Matrix data analysis"
authors = ["Carlos Melero"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0"
numpy = "^1.24"
matplotlib = "^3.7"
requests = "^2.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"